# src/router/productosRouter.ts
@@ -16,8 +16,8 @@ const router = Router();
 router.get("/",
     function (req: Request<{}, {}, {}, productosFiltrados>, res: Response) {
         // #swagger.tags = ['Productos']
-        // #swagger.description = 'Obtiene la lista de productos, con filtros opcionales por nombre, categoria, marca y estado activo'
-        // #swagger.parameters['nombreProducto'] = { in: 'query', description: 'Busqueda parcial por nombre', type: 'string' }
+        // #swagger.description = 'Obtiene la lista de productos, con filtros opcionales por nombre'
+        // #swagger.parameters['nombreProducto'] = { in: 'query', description: 'Busqueda por nombre', type: 'string' }
         const {nombreProducto} = req.query;
         let resultado = [...listaProductos];
 
@@ -34,7 +34,10 @@ router.get("/",
 );
 
 router.get("/:id", 
-    function (req: Request<idParam>, res: Response) {
+  function (req: Request<idParam>, res: Response) {
+    // #swagger.tags = ['Productos']
+    // #swagger.description = 'Obtiene la lista de un producto'
+    // #swagger.parameters['id'] = { in: 'path', required: true, type: 'integer', description: 'Id del producto' }
   const idBuscado = Number(req.params.id);
 
   if (isNaN(idBuscado)) {
@@ -64,7 +67,7 @@ router.post("/",
          required: true,
          schema: {
            nombreProducto: 'Cafe molido',
-           precioUnitario: 25.5,
+           precioUnitario: 25,
            marca: 'Altomayo',
            categoria: 'bebidas'
          }
@@ -91,20 +94,58 @@ router.post("/",
   });
 
 router.put("/:id", function (req: Request, res: Response) {
+   /*
+    #swagger.tags = ['Productos']
+    #swagger.description = 'Actualiza el estado de un producto'
+    #swagger.parameters['id'] = {description: 'Id del producto'}
+    #swagger.parameters['obj'] = {
+        in: 'body',
+        description: 'Actualizar activo',
+        schema: {activo: false}
+    }
+  */
   const idBuscado = Number(req.params.id);
   const index = listaProductos.findIndex(function (p) {
     return p.id === idBuscado;
   });
-  if (index === -1) {
-    return res.status(404).json({ error: "Pedido no encontrado." });
-  } else {
-    const {  }: actualizarProducto = req.body;
-    // actualizando la informacion del usuario
-    /*listaPedidos[index] = {
-      id: idBuscado,
-      estado: estado ?? listaPedidos[index]?.estado
-    };*/
+  if (index === -1) return res.status(404).json({ error: "Pedido no encontrado." });
+
+  const { activo }: actualizarProducto = req.body;
+  if (activo === undefined) return res.status(400).json({ error: "Debe enviar el campo 'activo'." });
+    listaProductos[index] = {
+    ...listaProductos[index]!, 
+    activo: activo ?? listaProductos[index]!.activo,
+  };
     res.json(listaProductos[index]);
+});
+
+router.delete("/:id", function (req: Request, res: Response) {
+  /*
+    #swagger.tags = ['Productos']
+    #swagger.description = 'Eliminar Producto'
+    #swagger.parameters['id'] = {description: 'Id del producto a eliminar'}
+    #swagger.parameters['obj'] = {
+        in: 'body',
+        description: 'Nuevo estado'
+    }
+  */
+  const idProducto = Number(req.params.id);
+    const index = Number(req.params.notaIndex);
+
+    const producto = listaProductos.findIndex( function(p){
+      return p.id ==- idProducto
+    });
+
+    if (index === -1) {
+    return res
+      .status(404)
+      .json({ error: "Producto no encontrado." });
+  } else {
+    let listaNuevaProductos = listaProductos.filter(
+      (e) => e.id !== idProducto,
+    );
+    setListaProductos(listaNuevaProductos);
+    res.json({ mensaje: "Producto eliminido exitosamente." });
   }
 });
 
